--- a/index.html
+++ b/index.html
@@ -124,27 +124,27 @@
       <div class="cards">
         <img src="./img/asge.png" alt="asge" class="logo">
         <p align="center">Applied Science and General Engineering</p>
-        <a class="bluebar" href="ASGE_HOD_DESk.html">Learn More</a>
+        <a class="bluebar" href="ASGE_HOD_DESk.html">Explore</a>
       </div>
       <div class="cards">
         <img src="./img/asge.png" alt="asge" class="logo">
         <p align="center" style="padding-bottom: 25px;">Information technology</p>
-        <a class="bluebar" href="IT_DEPARTMENT.html">Learn More</a>
+        <a class="bluebar" href="IT_DEPARTMENT.html">Explore</a>
       </div>
       <div class="cards">
         <img src="./img/asge.png" alt="asge" class="logo">
         <p align="center" style="padding-bottom: 25px;">Computer engineering</p>
-        <a class="bluebar" href="COMP_HOD_DESk.html">Learn More</a>
+        <a class="bluebar" href="COMP_DEP.html">Explore</a>
       </div>
       <div class="cards">
         <img src="./img/asge.png" alt="asge" class="logo">
         <p align="center">Electronic and Telecommunication</p>
-        <a class="bluebar" href="ENTC_HOD_DESk.html">Learn More</a>
+        <a class="bluebar" href="ENTC_DEPARTMENT.html">Explore</a>
       </div>
       <div class="cards">
         <img src="./img/asge.png" alt="asge" class="logo">
         <p align="center" style="padding-bottom: 25px;">Mechanical Engineering</p>
-        <a class="bluebar" href="MECH_HOD_DESk.html">Learn More</a>
+        <a class="bluebar" href="MECH_DEPT.html">Explore</a>
       </div>
     </div>
   </div>
@@ -158,7 +158,7 @@
         The motto of All Pune is ll translates to
 "Excellence in action is Yoga", essentially implying that doing your work well is (true) yoga. This can be traced to Sri Krishna's discourse with Arjuna in the Bhagavad Gita. The quote, in the larger context of the Gita, urges man to acquire equanimity because a mind of equanimity allows a man to shed distracting thoughts of the effects of his deeds and concentrate on the task before him. Equanimity is the source of perfection in Karmic endeavours that leads to Salvation.
       </p> <br> <br>
-      <div class="bluebar">Learn More</div>
+      <a class="bluebar" href="ABOUT_US.html" style="text-decoration: none;">Learn More</a>
     </div>
   </div>
   <div class="Departments">
