comp faculty,link department page
comp faculty image
link department page at landing page

--- a/index.html
+++ b/index.html
@@ -124,27 +124,27 @@
       <div class="cards">
         <img src="./img/asge.png" alt="asge" class="logo">
         <p align="center">Applied Science and General Engineering</p>
-        <a class="bluebar" href="ASGE_HOD_DESk.html">Learn More</a>
+        <a class="bluebar" href="ASGE_HOD_DESk.html">Explore</a>
       </div>
       <div class="cards">
         <img src="./img/asge.png" alt="asge" class="logo">
-        <p align="center" style="padding-bottom: 25px;">Information technology</p>
-        <a class="bluebar" href="IT_DEPARTMENT.html">Learn More</a>
+        <p align="center" style="padding-bottom: 25px;">Information Technology</p>
+        <a class="bluebar" href="IT_DEPARTMENT.html">Explore</a>
       </div>
       <div class="cards">
         <img src="./img/asge.png" alt="asge" class="logo">
-        <p align="center" style="padding-bottom: 25px;">Computer engineering</p>
-        <a class="bluebar" href="COMP_HOD_DESk.html">Learn More</a>
+        <p align="center" style="padding-bottom: 25px;">Computer Engineering</p>
+        <a class="bluebar" href="COMP_DEP.html">Explore</a>
       </div>
       <div class="cards">
         <img src="./img/asge.png" alt="asge" class="logo">
         <p align="center">Electronic and Telecommunication</p>
-        <a class="bluebar" href="ENTC_HOD_DESk.html">Learn More</a>
+        <a class="bluebar" href="ENTC_DEPARTMENT.html">Explore</a>
       </div>
       <div class="cards">
         <img src="./img/asge.png" alt="asge" class="logo">
         <p align="center" style="padding-bottom: 25px;">Mechanical Engineering</p>
-        <a class="bluebar" href="MECH_HOD_DESk.html">Learn More</a>
+        <a class="bluebar" href="MECH_DEPT.html">Explore</a>
       </div>
     </div>
   </div>
