--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
       </div>
       <div class="cards">
         <img src="./img/asge.png" alt="asge" class="logo">
-        <p align="center" style="padding-bottom: 25px;">Information technology</p>
+        <p align="center" style="padding-bottom: 25px;">Information Technology</p>
         <a class="bluebar" href="IT_DEPARTMENT.html">Learn More</a>
       </div>
       <div class="cards">
         <img src="./img/asge.png" alt="asge" class="logo">
-        <p align="center" style="padding-bottom: 25px;">Computer engineering</p>
-        <a class="bluebar" href="COMP_HOD_DESk.html">Learn More</a>
+        <p align="center" style="padding-bottom: 25px;">Computer Engineering</p>
+        <a class="bluebar" href="COMP_DEP.html">Learn More</a>
       </div>
       <div class="cards">
         <img src="./img/asge.png" alt="asge" class="logo">
