comp-faculty ,index,mechfaculty,index.html
mech faculty photo updated
index.html link updated
comp faculty photo updated

--- a/ASGE_HOD_DESk.html
+++ b/ASGE_HOD_DESk.html
@@ -147,13 +147,12 @@
                         <h2 class="head_ok">HOD's desk</h2>
                         <div class="hod_content2">
                             <div class="hod_pic">
-                                <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ASGE%2FASGE-IMAGES%2Fimage%201.png?alt=media&token=c671ab25-4a52-4411-8218-b1c5f0585a82"
+                                <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ASGE%2FASGE-FACULTY-IMG%2F1R9A2145.jpg?alt=media&token=68f87b18-1bfa-4d39-a17d-2d1b3dc758cc">
                             </div>
                             <div class="hod_contain">
                                 <p class="hod_name">Dr. (Mrs )Swati Kulkarni</p>
                                 <p class="hod_rank">Associate Professor and Head of Dept.</p>
-                                <div class="hod_mail"><span>Email :</span><a>hodasge@aitpune.edu.in</a>
-                                </div>
+                                <div class="hod_mail"><span>Email :</span><a>hodasge@aitpune.edu.in</a></div>
                             </div>
                         </div>
 
