--- a/COMP_HOD_DESk.html
+++ b/COMP_HOD_DESk.html
@@ -150,7 +150,7 @@
                     <h2 class="head_ok">HOD's desk</h2>
                     <div class="hod_content2">
                         <div class="hod_pic">
-                            <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-IMAGES%2Fman.png?alt=media&token=e9335016-9aba-4c01-b649-d68a1d4f78f9" height="150px" width="200px">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-FACULTYPROFILE%2F1R9A2183.jpg?alt=media&token=8e0bea8c-201c-43ee-8b7f-1e95d2e2dca9" >
                         </div>
                         <div class="hod_contain">
                             <p class="hod_name">Prof.(Dr.) S R Dhore</p>
@@ -193,7 +193,7 @@
                 .then(data => {
                     const tempElement = document.createElement('div');
                     tempElement.innerHTML = data;
-                    const specificContent = tempElement.querySelector(`#${elementId}`);
+                    const specificContent = tempElement.querySelector(#${elementId});
 
                     document.getElementById('mainContent').innerHTML = '';
                     document.getElementById('mainContent').appendChild(specificContent);
@@ -250,7 +250,7 @@
     });
         const HODLink = document.querySelector('[data-elementid="hod_content"]');
         HODLink.style.fontWeight = 'bold';
-        HODLink.style.color = '#0c2695';
+        HODLink.style.color = '#0c2695';
     
 
         function hideAllExceptCurrent(currentElementId) {
