--- a/MECH_HOD_DESk.html
+++ b/MECH_HOD_DESk.html
@@ -148,7 +148,7 @@
                     <h2 class="head_ok">HOD's desk</h2>
                     <div class="hod_content2">
                         <div class="hod_pic">
-                        <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-IMAGES%2FDrAwasarmol.jpg?alt=media&token=521bd755-a6d6-45ed-b0b1-abdd8286f47e" height="178px" width="174px">
+                        <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-FACULTYPROFILE%2F1R9A2159.jpg?alt=media&token=23319eb0-57f5-4450-830c-760cbe8ec770" >
                     </div>
                        
                         <div class="hod_contain">
