it faculty done
all width fix in top navbar removed

--- a/IT_HOD_DESk.html
+++ b/IT_HOD_DESk.html
@@ -149,7 +149,7 @@
                 <div id="hod_content">
                     <h2 class="head_ok">HOD's desk</h2>
                     <div class="hod_content2">
-                        <div class="hod_pic"><img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-IMAGES%2FSangeeta-Jadhav.jpg?alt=media&token=c0a8e228-a7d1-4ac9-903a-902ca879a0a8" alt="" style="height: 9rem;">
+                        <div class="hod_pic"><img  src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FFACULTY-IMAGES%2F1R9A2232.jpg?alt=media&token=2d9d9b1a-c7fb-4b21-9c84-539da9f6c451" alt="">
                         </div>
                         <div class="hod_contain">
                             <p class="hod_name">Dr.(Mrs)Sangeeta Jadhav</p>
