--- a/index.html
+++ b/index.html
@@ -326,22 +326,13 @@
       <hr>
       <div>
         <h2>QUICK LINKS</h2>
-        <a href="#"><b>&gt&gt</b> <u>VMEDULIFE</u></a>
-        <a href="#"><b>&gt&gt</b> <u>VMEDULIFE</u></a>
-        <a href="#"><b>&gt&gt</b> <u>VMEDULIFE</u></a>
-        <a href="#"><b>&gt&gt</b> <u>VMEDULIFE</u></a>
-        <a href="#"><b>&gt&gt</b> <u>VMEDULIFE</u></a>
-        <a href="#"><b>&gt&gt</b> <u>VMEDULIFE</u></a>
+        <a href="https://erp.aitpune.edu.in:8006/"><b>&gt&gt</b> <u>ERP</u></a>
+        <a href="https://moodle.aitpune.edu.in/login/index.php"><b>&gt&gt</b> <u>E-LMS</u></a>
+        <a href="https://outlook.office365.com/mail/"><b>&gt&gt</b> <u>E-Mail</u></a>
+        <a href="https://www.aitpune.com/emagazine.aspx"><b>&gt&gt</b> <u>E-Magazine</u></a>
+        <a href="https://www.aitpune.com/Library.aspx"><b>&gt&gt</b> <u>E-Library</u></a>
       </div>
-      <div>
-        <h2>EXPLORE</h2>
-        <a href="#"><b>&gt&gt</b> <u>VMEDULIFE</u></a>
-        <a href="#"><b>&gt&gt</b> <u>VMEDULIFE</u></a>
-        <a href="#"><b>&gt&gt</b> <u>VMEDULIFE</u></a>
-        <a href="#"><b>&gt&gt</b> <u>VMEDULIFE</u></a>
-        <a href="#"><b>&gt&gt</b> <u>VMEDULIFE</u></a>
-        <a href="#"><b>&gt&gt</b> <u>VMEDULIFE</u></a>
-      </div>
+
       <div>
         <h2>USEFUL LINKS</h2>
         <a href="#"><b>&gt&gt</b> <u>VMEDULIFE</u></a>
@@ -349,8 +340,8 @@
         <a href="#"><b>&gt&gt</b> <u>VMEDULIFE</u></a>
         <a href="#"><b>&gt&gt</b> <u>VMEDULIFE</u></a>
         <a href="#"><b>&gt&gt</b> <u>VMEDULIFE</u></a>
-        <a href="#"><b>&gt&gt</b> <u>VMEDULIFE</u></a>
       </div>
+
      <hr>
       <div class="footer_image">
         <div class="g20_image">
