added mandatory page

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       <div class="logo">
       <div class="logoimg"><img src="diamond.png" alt="logo" height="40px" width="40px"></div>
       </div>
-      <div class="linkinfo"><u >Compulsory</u></div>
+      <div class="linkinfo"><u> <a href="Mandatory.html" style="text-decoration: none; color:#fff;">Compulsory</a></u></div>
     </div>
     <div class="row">
       <div class="logo">
