--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
       <div class="logo">
         <div class="logoimg"><img src="diamond.png" alt="logo" height="40px" width="40px"></div>
       </div>
-      <div class="linkinfo"><u >NBA</u></div>
+      <div class="linkinfo"><u> <a style="color: white;" href="nbastatus.html">NBA</a></u></div>
     </div>
     <div class="row">
       <div class="logo">
